2009-03-14  Richard Sandiford  <r.sandiford@uk.ibm.com>

	* gas/ppc/xcoff-branch-1.s, gas/ppc/xcoff-branch-1-32.d,
	gas/ppc/xcoff-branch-1-64.d: New tests.
	* gas/ppc/aix.exp: Run them.

2009-03-11  Hans-Peter Nilsson  <hp@axis.com>

	* gas/cris/rd-bkw5.d, gas/cris/rd-bkw5.s, gas/cris/rd-bkw5b.d,
	gas/cris/rd-bkw5bpic.d, gas/cris/rd-bkw5bv32.d,
	gas/cris/rd-bkw5bv32pic.d, gas/cris/rd-bkw5pic.d,
	gas/cris/rd-bkw5v32.d, gas/cris/rd-bkw5v32pic.d: New tests.

2009-03-10  Hans-Peter Nilsson  <hp@axis.com>

	* gas/cris/rd-bkw4.d, gas/cris/rd-bkw4v32.d, gas/cris/rd-bkw4.s:
	New test.

2009-03-10  Alan Modra  <amodra@bigpond.net.au>

	* gas/ppc/altivec_and_spe.d (objdump): Add -Maltivec.
	* gas/ppc/common.d: Adjust for -Mcom not including -Mppc.

2009-03-05  Joseph Myers  <joseph@codesourcery.com>

	* gas/arm/mapmisc.d, gas/arm/mapmisc.dat, gas/arm/mapmisc.s: New.

2009-03-02  Qinwei  <qinwei@sunnorth.com.cn>

	* gas/score/arith_32-lt.d: New file.
	* gas/score/arith_32.d: New file.
	* gas/score/arith_32.s: New file.
	* gas/score/bit_32-lt.d: New file.
	* gas/score/bit_32.d: New file.
	* gas/score/bit_32.s: New file.
	* gas/score/branch_32-lt.d: New file.
	* gas/score/branch_32.d: New file.
	* gas/score/branch_32.s: New file.
	* gas/score/cmp_32-lt.d: New file.
	* gas/score/cmp_32.d: New file.
	* gas/score/cmp_32.s: New file.
	* gas/score/load_store_32-lt.d: New file.
	* gas/score/load_store_32.d: New file.
	* gas/score/load_store_32.s: New file.
	* gas/score/logical_32-lt.d: New file.
	* gas/score/logical_32.d: New file.
	* gas/score/logical_32.s: New file.
	* gas/score/mv_32-lt.d: New file.
	* gas/score/mv_32.d: New file.
	* gas/score/mv_32.s: New file.
	* gas/score/relax_32.exp: New file.
	* gas/score/relaxation_macro.h: New file.
	* gas/score/shift_32-lt.d: New file.
	* gas/score/shift_32.d: New file.
	* gas/score/shift_32.s: New file.
	* gas/score/syscontrol_32-lt.d: New file.
	* gas/score/syscontrol_32.d: New file.
	* gas/score/syscontrol_32.s: New file.
